fixed the navbar overflow issue

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,6 +66,7 @@
     height: 80%;
     width: 65%;
     display: flex;
+    overflow: hidden;
 
     .sidebar {
       flex: 1;
